--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.4",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.7.12",
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
